# oreo_system

./: .gitignore  MOT.rviz  README.md  environment.sh  motor.sh  oreo.rviz  record_bag.sh  record_bag2.sh  start_MOT_demo.sh  start_oreo.sh
bags/: topic_size.py
catkin_ws/src/control/teleop_twist_joy/config/: xbox-holonomic.config.yaml
catkin_ws/src/control/teleop_twist_joy/launch/: teleop.launch
catkin_ws/src/mapping/LeGO-LOAM/LeGO-LOAM/include/: utility.h
catkin_ws/src/mapping/LeGO-LOAM/LeGO-LOAM/launch/: run.launch
catkin_ws/src/mapping/LeGO-LOAM/LeGO-LOAM/src/: mapOptmization.cpp
catkin_ws/src/mapping/slam_gmapping/gmapping/launch/: slam_gmapping_pr2.launch
catkin_ws/src/navigation_pkgs/navigation/: CMakeLists.txt  package.xml
catkin_ws/src/navigation_pkgs/navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  eband_local_planner_params.yaml  gmapping.xml
catkin_ws/src/navigation_pkgs/navigation/launch/: move_base_gmapping.launch
catkin_ws/src/oreo_base/: .gitattributes  CMakeLists.txt  package.xml
catkin_ws/src/oreo_base/launch/: debug.launch  joystick.launch  keyboard.launch  oreo.launch
catkin_ws/src/oreo_base/msg/: EncoderPair.msg
catkin_ws/src/oreo_base/param/: oreo_base.yaml
catkin_ws/src/oreo_base/scripts/: combine_laser.py  cut_scan.py  scale_cmd_vel.py
catkin_ws/src/oreo_base/src/: keyboard_controller.cpp  laser_latency_test.cpp  motor_controller.cpp  navigator_maths.h  odometer_odom.cpp
catkin_ws/src/sensors/zed-ros-wrapper/zed_wrapper/launch/: zed2.launch
catkin_ws/src/sensors/zed-ros-wrapper/zed_wrapper/launch/include/: zed_camera.launch.xml
procman/: start_oreo
